# YAGL-Engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: triangle.frag  triangle.vert
engine/core/: Application.cpp  Application.h
engine/platform/: Input.cpp  Input.h  Window.cpp  Window.h
engine/render/: Renderer.cpp  Renderer.h  TransformManager.cpp  TransformManager.h
engine/util/: Logger.cpp  Logger.h
engine/utils/: Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h
game/: TriangleApp.cpp  TriangleApp.h
src/: main.cpp
src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
